# mine-rs

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  test.py
libmine/: mine.c
py_src/minepy/: __init__.py  __init__.pyi
src/: bindings.rs  lib.rs  mine.rs  pywraper.rs
