[project]
name = 'minepy'
requires-python = '>=3.7'
authors = [
    {name = 'tongqing.li yumohc@gmail.com'},
]

dynamic = [
    'description',
    'license',
    'readme',
]

[project.urls]
Homepage = 'https://github.com/yumoh/mine-rs'

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "py_src"
module-name = "minepy.mine"
bindings = 'pyo3'
features = ["pyo3/extension-module"]

